vpc.tf
##Create a VPC
resource "aws_vpc" "my_vpc" {
    cidr_block = "10.0.0.0/16"
    enables_dns_support = true
    enables_dns_hostname = true
    tags = {
        Name = "my-vpc"
    }
}

resource "aws_subnet" "public_subnet" {
    count = 2
    vpc_id = aws_vpc.my_vpc.vpc_id
    cidr_block = cidrsubnet(aws_vpc.my_vpc.cidr_block, 8, count.index)
    map_public_ip_on_launch = true
}

resource "aws_internet_gateway" "main" {
    vpc_id = aws_vpc.my_vpc.id
}

resource "aws_route_table" "public" {
    vpc_id = aws_vpc.my_vpc.id
    route {
        cidr_block = "0.0.0.0/0"
        gateway_id = aws_internet_gateway.main.id
    }
}
